--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@angular/http": "^2.0.0-rc.1",
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@angular/router-deprecated": "^2.0.0-rc.1",
     "babel-polyfill": "^6.9.1",
     "rxjs": "^5.0.0-beta.8",
     "zone.js": "^0.6.12"
@@ -47,6 +46,7 @@
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.3",
     "karma-phantomjs-launcher": "^1.0.0",
     "lite-server": "^2.2.0",
     "mocha": "^2.5.3",
